# minimidi

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/minimidi/: __init__.py  _minimidi.pyi
scripts/: test.sh
src/: lib.rs
tests/: conftest.py  test_cards.py  test_context_manager.py  test_messages.py  test_os_errors.py  test_send_bytes.py  test_stubs.py  test_threading.py  test_validation.py
tests/integration/: conftest.py  test_roundtrip.py
